# iaGenerativa_taller2

./: README.md  Taller1_Fase3_EcoMarket.ipynb  main2.py  main3.py  main4.py  pyproject.toml  rag_ejemplo.py  ragi_llamaindex.py  requirements.txt  vectorstore.py
docs/: FAQ_EcoMarket_Extendido.json  Inventario_Productos.xlsx
iaGenerativa_taller2/: .env  README.md  pyproject.toml  requirements.txt
iaGenerativa_taller2/src/: main2.py
iaGenerativa_taller2/src/readers/: excel_reader.py  pdf_reader.py  txt_reader.py
